修复(review): 修正审核进度并限制姓名重复